# cavepediav2

./: .gitignore  .tool-versions  9030_docker.sh  README.md  cavepedia-v2.sh  docker.sh
.gitea/workflows/: build-push-agent.yaml  build-push-discord.yaml  build-push-poller.yaml  build-push-web.yaml  build-push.yaml  build.yaml
discord/: .env.example  Dockerfile  pyproject.toml
discord/src/: agent_client.py  config.py  main.py  rate_limiter.py
mcp/: Dockerfile  README.md  pyproject.toml  server.py
mcp/test/: client.py
poller/: .dockerignore  Dockerfile  Makefile  README.md  getobject.py  main.py  pyproject.toml  search.py  wget-log
web/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  next.config.ts  package-lock.json  package.json
web/.gitea/workflows/: build.yaml
web/agent/: .dockerignore  .env.example  Dockerfile  langgraph.json  main.py  pyproject.toml  server.py
web/agent/src/: agent.py  main.py
web/prompts/: auth0.md
web/scripts/: run-agent.sh  start-agent.sh
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/api/copilotkit/: route.ts
web/src/lib/: auth0.ts  env.ts
