[project]
name = "vpi-1000"
version = "1.0.0"
description = "VPI-1000"
requires-python = ">=3.13,<3.14"
dependencies = [
    "langchain==1.1.0",
    "langgraph==1.0.4",
    "langsmith>=0.4.49",
    "anthropic>=0.40.0",
    "fastapi>=0.115.5,<1.0.0",
    "uvicorn>=0.29.0,<1.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "langgraph-cli[inmem]>=0.4.7",
    "langchain-google-genai>=2.1.0",
    "langchain-mcp-adapters>=0.1.0",
    "docstring-parser>=0.17.0",
    "jsonschema>=4.25.1",
    "copilotkit>=0.1.0",
]
