[project]
name = "cavepedia-agent"
version = "0.1.0"
description = "Cavepedia AI Agent with MCP tools"
requires-python = ">=3.13"
dependencies = [
    "uvicorn",
    "starlette",
    "pydantic-ai",
    "mcp",
    "google-genai",
    "google-cloud-aiplatform",
    "ag-ui-protocol",
    "python-dotenv",
    "httpx",
]
