[project]
name = "cavepedia-agent"
version = "0.1.0"
description = "Cavepedia AI Agent with MCP tools"
requires-python = ">=3.13"
dependencies = [
    "uvicorn",
    "starlette",
    "pydantic-ai",
    "openai",
    "mcp",
    "ag-ui-protocol",
    "python-dotenv",
    "httpx",
    "logfire>=4.16.0",
    "python-json-logger>=4.0.0",
]
